--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 body {
   margin: 0;
-  font-family: 'Pretendard-Regular', Pretendard, Roboto, -apple-system, BlinkMacSystemFont, system-ui, "Noto Sans KR", sans-serif;
+  font-family: 'Pretendard-Regular', Pretendard, Roboto, -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
 }
 
 code {
